[package]
name = "rustchain"
version = "0.1.0"
authors = ["Mikhail Pak <mikhail.pak@tum.de>"]

[dependencies]
blake2 = "^0.6.1"
data-encoding = "^2.0.0-rc.2"
rocket = "^0.3.3"
rocket_codegen = "^0.3.3"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[dependencies.rocket_contrib]
version = "^0.3.3"
default-features = false
features = ["json"]
